[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.7
height = 0.9

[sub_resource type="CapsuleMesh" id=2]
radius = 0.75

[sub_resource type="SphereShape" id=3]
radius = 35.0

[node name="Player" type="KinematicBody" groups=["Player"]]
script = ExtResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.437085, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="AudioStreamPlayer_Footstep2" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer_Footstep1" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
